# janus-manager

./: .gitmodules  CMakeLists.txt  definitions.hpp  hash.cpp  http.cpp  http.hpp  janus-manager.service  main.cpp  stream.cpp  stream.hpp  uri.cpp  uri.hpp
share/: janus-manager.env  janus-manager.service
src/: definitions.hpp  hash.hpp  http.hpp  main.cpp  stream.hpp  uri.cpp  uri.hpp
